changes in blocks

--- a/styles/blocks/_features.less
+++ b/styles/blocks/_features.less
@@ -26,12 +26,22 @@
          column-gap: 0px;
       }
 
+      @media (max-width: 740px) {
+         grid-template-columns: repeat(3, 160.33px);
+      }
+
       @media (max-width: 600px) {
-         grid-template-columns: repeat(2, 280.33px);
+         grid-template-columns: repeat(2, 187.33px);
       }
 
       @media (max-width: 430px) {
          grid-template-columns: repeat(2, 174.33px);
+
+      }
+
+      @media (max-width: 320px) {
+         grid-template-columns: repeat(2, 131.33px);
+
       }
    }
 
