--- a/styles/blocks/_fonts.less
+++ b/styles/blocks/_fonts.less
@@ -1,20 +1,20 @@
 // main: ./../main.less
 @font-face {
    font-family: 'Muli';
-   src: url('../assets/fonts/Muli-Bold.woff') format('woff');
+   src: url('../assets/fonts/Muli.woff') format('woff');
    font-weight: 700;
 }
 
 @font-face {
-   font-family: 'Muli-ExtraBold';
-   src: url('../assets/fonts/Muli-ExtraBold.eot');
-   src: local('☺'), url('../assets/fonts/Muli-ExtraBold.woff') format('woff'), url('../assets/fonts/Muli-ExtraBold.ttf') format('truetype'), url('../assets/fonts/Muli-ExtraBold.svg') format('svg');
+   font-family: 'Muli';
+   src: url('../assets/fonts/Muli.eot');
+   src: local('☺'), url('../assets/fonts/Muli-ExtraBold.woff') format('woff');
    font-weight: 800;
 }
 
 @font-face {
    font-family: 'Muli';
-   src: url('../assets/fonts/Muli-Regular.eot');
-   src: local('☺'), url('../assets/fonts/Muli-Regular.woff') format('woff'), url('../assets/fonts/Muli-Regular.ttf') format('truetype'), url('../assets/fonts/Muli-Regular.svg') format('svg');
+   src: url('../assets/fonts/Muli.eot');
+   src: local('☺'), url('../assets/fonts/Muli-Regular.woff') format('woff');
    font-weight: 400;
 }
