--- a/styles/blocks/_subscription.less
+++ b/styles/blocks/_subscription.less
@@ -60,6 +60,8 @@
       height: 60px;
       border-radius: 40px;
       border-style: none;
+      outline: 0;
+
 
       @media(max-width:1027px) {
          width: 430px;
