--- a/styles/blocks/_about.less
+++ b/styles/blocks/_about.less
@@ -38,13 +38,16 @@
       }
 
       @media (max-width: 767px) {
-         max-height: 520px;
+         height: 520px;
       }
 
       @media (max-width: 510px) {
-         max-height: 410px;
+         height: 360px;
       }
 
+      @media (max-width: 320px) {
+         height: 250px;
+      }
    }
 
    &__description {
@@ -53,6 +56,10 @@
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+
+      @media screen and (max-width:400px) {
+         padding: 0;
+      }
    }
 
    &__title {
@@ -80,6 +87,8 @@
       }
 
       @media (max-width: 365px) {
+         margin: 19px auto 0;
+
          width: 286px;
          font-size: 25px;
       }
