--- a/styles/blocks/_story.less
+++ b/styles/blocks/_story.less
@@ -100,7 +100,7 @@
 
       @media (max-width: 1260px) {
          position: relative;
-         margin: 50px 0 0 0;
+         margin: 0;
          padding-bottom: 30px;
       }
 
