--- a/styles/blocks/_btn.less
+++ b/styles/blocks/_btn.less
@@ -14,7 +14,6 @@
 }
 
 .btn:hover {
-   box-shadow: 0 0 40px rgba(0, 0, 0, .2) inset;
    border: none;
-   background-color: rgb(242, 102, 47);
+   background-color: #ffd68f;
 }
