--- a/styles/blocks/_features.less
+++ b/styles/blocks/_features.less
@@ -45,6 +45,10 @@
       }
    }
 
+   &__item {
+      align-self: flex-end;
+   }
+
    &__item-text {
       color: #f2612d;
       font-size: 25px;
