--- a/styles/blocks/_footer.less
+++ b/styles/blocks/_footer.less
@@ -9,10 +9,10 @@
       justify-content: space-around;
       padding: 79px 0 93px 0;
 
-      @media(max-width:1027px) {
+      @media(max-width:1300px) {
          display: flex;
          flex-wrap: wrap;
-         padding: 10px 0 10px 0;
+         padding: 20px 0 10px;
       }
 
       @media(max-width:470px) {
@@ -26,7 +26,7 @@
       height: 68px;
       align-self: center;
 
-      @media(max-width:1027px) {
+      @media(max-width:1300px) {
          display: none;
       }
    }
@@ -38,7 +38,7 @@
       max-width: 262px;
       margin: 28px 0 0 185px;
 
-      @media(max-width:1027px) {
+      @media(max-width:1300px) {
          max-width: 220px;
       }
 
@@ -64,7 +64,7 @@
          content: " ";
          width: 48px;
          height: 48px;
-         background: url(/assets/images/subscribe/arrow-botton.png) no-repeat;
+         background: url(../assets/images/subscribe/arrow-botton.png) no-repeat;
          position: absolute;
          top: -26px;
          left: -66px;
