--- a/styles/blocks/_information.less
+++ b/styles/blocks/_information.less
@@ -40,6 +40,7 @@
       font-size: 18px;
       line-height: 35px;
       color: #6d450c;
+      font-weight: 600;
 
       @media (max-width: 470px) {
          font-size: 25px;
