--- a/styles/blocks/_instagram.less
+++ b/styles/blocks/_instagram.less
@@ -28,7 +28,7 @@
       top: 1px;
       left: -38px;
 
-      background: url(/assets/images/instagram/icon.png) no-repeat;
+      background: url(../assets/images/instagram/icon.png) no-repeat;
    }
 
    &__image-items {
@@ -68,7 +68,7 @@
          width: 60px;
          height: 60px;
 
-         background: url(/assets/images/instagram/icon-white.png) no-repeat;
+         background: url(../assets/images/instagram/icon-white.png) no-repeat;
 
          position: absolute;
          bottom: -13px;
