--- a/styles/blocks/_payment.less
+++ b/styles/blocks/_payment.less
@@ -14,8 +14,11 @@
       padding-bottom: 32px;
       color: rgb(255, 255, 255);
 
-      @media (max-width: 790px) {
-         padding-bottom: 20px;
+      @media (max-width: 460px) {
+         padding: 0;
+         margin-top: 20px;
+         margin-bottom: 19px;
+
          font-size: 24px;
       }
    }
