--- a/styles/blocks/_personal.less
+++ b/styles/blocks/_personal.less
@@ -28,21 +28,7 @@
       margin-right: 136px;
       position: relative;
 
-      &::after {
-         content: "0";
-         width: 18px;
-         height: 18px;
-         background-color: #ffffff;
-         border-radius: 50%;
-         position: absolute;
-         top: -10px;
-         right: -18px;
-         -webkit-border-radius: 50%;
-         -moz-border-radius: 50%;
-         -ms-border-radius: 50%;
-         -o-border-radius: 50%;
-         text-align: center;
-      }
+
 
       @media (max-width: 1024px) {
          margin-right: 100px;
@@ -51,6 +37,19 @@
       @media (max-width: 560px) {
          margin-right: 0;
       }
+   }
+
+   &__list-span {
+      width: 20px;
+      height: 20px;
+      background-color: #ffffff;
+      border-radius: 50%;
+      position: absolute;
+      top: -11px;
+      right: -19px;
+
+      text-align: center;
+      line-height: 18px;
    }
 
 }
