--- a/styles/blocks/_slider.less
+++ b/styles/blocks/_slider.less
@@ -34,7 +34,7 @@
    .slick-arrow.slick-prev {
 
       left: 45%;
-      background: url('/assets/images/testimonials/arrow-left .png') 0 0 / 100% no-repeat;
+      background: url('../assets/images/testimonials/arrow-left .png') 0 0 / 100% no-repeat;
 
       @media (max-width: 1027px) {
          left: 43%;
