--- a/styles/blocks/_slider.less
+++ b/styles/blocks/_slider.less
@@ -59,7 +59,7 @@
 
    .slick-arrow.slick-next {
       right: 45%;
-      background: url('/assets/images/testimonials/arrow-right .png') 0 0 / 100% no-repeat;
+      background: url('../assets/images/testimonials/arrow-right .png') 0 0 / 100% no-repeat;
 
       @media (max-width: 1027px) {
          right: 43%;
