--- a/styles/blocks/_btn.less
+++ b/styles/blocks/_btn.less
@@ -15,5 +15,9 @@
 
 .btn:hover {
    border: none;
-   background-color: #ffd68f;
+   background-color: #db7b06;
+}
+
+.btn:focus {
+   background-color: #6c2c1c;
 }
