--- a/styles/blocks/_social.less
+++ b/styles/blocks/_social.less
@@ -7,8 +7,14 @@
    &__list-item {
       margin: 0 30px 0 0;
 
+      transition: all .3s ease;
+
       &:last-child {
          margin: 0;
+      }
+
+      &:hover {
+         transform: scale(1.1);
       }
    }
 
